--- a/style.css
+++ b/style.css
@@ -266,3 +266,75 @@ margin-left: 20px;
 }
 
 /*#endregion*/
+
+/*#region signup*/
+
+.create-account {
+    font-family: 'Poppins', sans-serif;
+    height: 100px;
+    text-align: center;
+    margin: 5%;
+    font-weight: 100;
+    font-size: 3vh;
+}
+
+.sign-up-container{
+    display: flex;
+}
+
+.sign-up-right {
+    flex: 60%;
+    margin-right: 5%;
+}
+
+.sign-up-right img{
+    height: 50vh;
+    float: right;
+}
+
+.sign-up-left {
+    flex: 40%;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin-left: 5%;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=password], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+
+
+
+/*#endregion*/
