--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     
 }
-
+/*Reference: musescore.com*/
 /*#region Index*/
 
 body {
@@ -15,52 +15,58 @@ button{
     font-family: 'Poppins', sans-serif;
 }
 
-header{
+header {
     display: flex;
-    width: 90%;
+    width: 100%;
     margin: auto;
-    height: 10vh;
+    height: 7vh;
     align-items: center;
-    border-bottom: 1px solid gray;
+    background-color: #00909f;
+
 }
 
 .logo-container, .nav-links, .cart{
     display: flex;
+
 }
 
 .logo-container{
     flex: 1;
 }
 
-.logo-container a{
-    text-decoration: none;
-}
+    .logo-container a {
+        text-decoration: none;
+        margin-left: 20%;
+
+    }
 
 .logo {
     font-weight: 200;
     margin: 5px;
-    color: black;
-    font-size: 3vw;
+    color: white;
+    font-size: 2vw;
+    margin-top: 15px;
 }
 
 nav {
     flex: 3;
 }
 
-.nav-links{
+.nav-links {
     justify-content: space-around;
     list-style: none;
+    margin-top: 15px;
 }
 
 .nav-link {
-    color: #5f5f79;
-    font-size: 2vw;
+    color: white;
+    font-size: 1.5vw;
     text-decoration: none;
     font-weight: 200;
-   transition: .3s;
-   opacity: 1;
-   border: none;
-   background: none;
+    transition: .3s;
+    opacity: 1;
+    border: none;
+    background: none;
 }
 
 .nav-link:hover{
@@ -183,38 +189,67 @@ nav {
 
 /*#region Catalog*/
 
-.browse-container {
-    height: 200px;
-    margin: 0% 5% 0% 5%;
-    display: flex;
-    font-weight: 100;
-    border-bottom: solid black thin;
-}
-
-.browse-text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 4vw;
-}
-
- .browse-text h1{
-     font-weight: 100;
+ .catalog-content-container{
+     display: flex;
  }
 
-.row{
-    display: flex;
-    margin: 3% 5% 0% 5%;
+ .filters{
+     text-align:left;
+     font-weight: 200;
+     vertical-align: bottom;
+     margin-top: 2%;
+     margin-left: 2%;
+ }
+
+ .top-hubs{
+     display:flex;
+     flex-direction: row;
+     margin: 2%;
+ }
+
+.top-hubs button{
+    border: solid lightgray .1px;
+    padding: 20px;
+    height: 100px;
+    width: 140px;
+    background-color: white;
+    transition: .3s;
+    margin: 1px;
+    
 }
 
-.left{
-    flex:20%;
-    padding: 15px 0;
+    .top-hubs button:hover {
+        border: solid darkgray 1px;
+        background-color: #00909f;
+        color: white;
+        cursor: pointer;
+    }
+
+.middle-right h2{
+    font-weight: 200;
+}
+
+.middle-right a{
+    font-weight: 200;
+}
+
+.row{
+    border-right: solid gray 1px;
+}
+
+.left {
+    flex: 20%;
+    background-color: #f2f2f2;
+    height: 100%;
 }
 
 .left h2{
-    padding-left: 8px;
-margin-left: 20px;
+    padding: 10%;
+    font-weight: 200;
+}
+
+.left h3 {
+    margin-left: 20%;
 }
 
 .left ul{
@@ -222,13 +257,15 @@ margin-left: 20px;
     list-style-type: circle;
     margin-top: 5%;
     margin-bottom: 5%;
+    margin-left: 20%;
 }
 
-.left ul a{
-    text-decoration: none;
-    color: black;
-    transition: .3s;
-}
+    .left ul a {
+        text-decoration: none;
+        color: black;
+        transition: .3s;
+        font-weight: 200;
+    }
 
 .left ul a:hover{
     background-color: lightgray;
@@ -237,7 +274,11 @@ margin-left: 20px;
 }
 
 .right{
-    flex:80%;
+    flex: 80%;
+}
+
+.middle-right{
+   
     padding: 15px;
 }
 
